Add footer with center-aligned footer links

--- a/src/index.html
+++ b/src/index.html
@@ -86,5 +86,32 @@
       </li>
     </ul>
   </aside>
+
+  <footer>
+    <ul>
+      <li>
+        Copyright &copy; 2016, All Rights Reserved.
+      <li>
+        <a href="/contact">
+          Contact Us
+        </a></li>
+      <li>
+        <a href="/privacy">
+          Privacy &amp; Cookies
+        </a></li>
+      <li>
+        <a href="/terms">
+          Terms of Use
+        </a></li>
+      <li>
+        <a href="/sales_and_refunds">
+          Sales and Refunds
+        </a></li>
+      <li>
+        <a href="/site_map">
+          Site Map
+        </a></li>
+    </ul>
+  </footer>
 </body>
 </html>
