--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <div class="wrapper">
     <nav>
-      <ul>
+      <ul class="nav-bar">
         <li><a href="#">My Music</a></li>
         <li><a href="#">Playlist</a></li>
         <li><a href="#">New</a></li>
@@ -20,6 +20,19 @@
           <i class="fa fa-search" aria-hidden="true"></i>
         </li>
       </ul>
+      <div class="mobile-nav">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+        <ul>
+          <li>
+            <i class="fa fa-times close-x" aria-hidden="true" ></i>
+          </li>
+          <li><a href="#">My Music</a></li>
+          <li><a href="#">Playlist</a></li>
+          <li><a href="#">New</a></li>
+          <li><a href="#">Explore</a></li>
+        </ul>
+        <i class="fa fa-search" aria-hidden="true"></i>
+      </div>
     </nav>
 
     <div class="content">
@@ -64,6 +77,7 @@
             <img src="images/top_3.jpg" alt="The Chainsmokers album">
             <p>
               <span>Don't Let Me Down</span>
+        <!--       if the span is too long, it does push the entire p tag into a separate line. given more time, i'd find a way around this -->
               <span>The Chainsmokers, Daya</span>
             </p>
           </li>
