Add script and button for Top Songs to show top 3 and then all songs with onclick event

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,9 @@
             </p>
           </li>
         </ul>
+        <button id="display-toggle">
+          See More
+        </button>
       </div>
     </div>
 
