Add the viewport meta tag to control layout for mobile browsers. Change the media queries from device-width to width instead. Add more margin-top for cards in order to fix overlap between cards and nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="stylesheets/stylez.css">
   <script src="https://use.fontawesome.com/2be986eb1f.js"></script>
   <script src="scripts/vanilla_script.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body onload="toggleResponsiveNav();">
 
@@ -18,7 +20,9 @@
         <li><a href="#">New</a></li>
         <li><a href="#">Explore</a></li>
         <li>
-          <i class="fa fa-search" aria-hidden="true"></i>
+          <a href="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </a>
         </li>
       </ul>
       <div class="mobile-nav" id="mobile-nav">
